[package]
name = "deno_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "deno_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
deno_core = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde_v8 = { version = "0.44.0"}
